src/lib/SensorGrammarParser.js
// Generated from grammar/SensorGrammar.g4 by ANTLR 4.13.1
// jshint ignore: start
import antlr4 from 'antlr4';
import SensorGrammarListener from './SensorGrammarListener.js';
import SensorGrammarVisitor from './SensorGrammarVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class SensorGrammarParser extends antlr4.Parser {

    static grammarFileName = "SensorGrammar.g4";
    static literalNames = [ null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, "'#'", "'.'", "'('", "')'", "','", 
                            "';'", "':'", "'-'", "'['", "']'" ];
    static symbolicNames = [ null, "CREATE_SYMBOL", "SENSOR_SYMBOL", "PRODUCT_SYMBOL", 
                             "USING_SYMBOL", "DIMENSION_SYMBOL", "DIMENSIONS_SYMBOL", 
                             "RANGE_SYMBOL", "WITH_SYMBOL", "PROPERTIES_SYMBOL", 
                             "INTERVAL_SYMBOL", "DATASOURCE_SYMBOL", "GEOMETRY_SYMBOL", 
                             "MEASUREMENT_SYMBOL", "DATA_SYMBOL", "SPATIAL_SYMBOL", 
                             "PARENT_SYMBOL", "CATEGORICAL_SYMBOL", "UNITS_SYMBOL", 
                             "ICON_SYMBOL", "BBOX_SYMBOL", "DEFAULT_SYMBOL", 
                             "DISPLAYSTRING_SYMBOL", "FIELD_SYMBOL", "AS_SYMBOL", 
                             "COLOR_SYMBOL", "REQUIRED_SYMBOL", "UNIQUE_SYMBOL", 
                             "INFINITY_SYMBOL", "MINUS_INFINITY_SYMBOL", 
                             "TO_SYMBOL", "ELASTICSEARCH_SYMBOL", "POSTGRES_SYMBOL", 
                             "TYPE", "POUND_SYMBOL", "DOT_SYMBOL", "OPAR_SYMBOL", 
                             "CPAR_SYMBOL", "COMMA_SYMBOL", "SCOL_SYMBOL", 
                             "COLON_SYMBOL", "DASH_SYMBOL", "BRA_SYMBOL", 
                             "KET_SYMBOL", "HEX_COLOR", "INT_NUMBER", "FLOAT_NUMBER", 
                             "COMMENT", "WHITESPACE", "IDENTIFIER", "QUOTED_TEXT" ];
    static ruleNames = [ "parse", "sentence", "createStatement", "createProduct", 
                         "createRange", "rangeProperty", "rangeNumber", 
                         "createDimension", "createSpatialDimension", "createCategoricalDimension", 
                         "createParentDimension", "createDimensionProperties", 
                         "dimPropertyDefinition", "createSensor", "createSensorProperties", 
                         "sensorPropertyDefinition", "createSensorMeasurementData", 
                         "createMeasurementProperty", "addSpatialDimensionToSensor", 
                         "addCategoricalDimensionToSensor", "addBBXToSensor", 
                         "srid", "identifier", "text", "dataSource", "hexColor", 
                         "floatNumber", "negativeFloat", "coordinate" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = SensorGrammarParser.ruleNames;
        this.literalNames = SensorGrammarParser.literalNames;
        this.symbolicNames = SensorGrammarParser.symbolicNames;
    }



	parse() {
	    let localctx = new ParseContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, SensorGrammarParser.RULE_parse);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 59; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 58;
	            this.sentence();
	            this.state = 61; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===1);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	sentence() {
	    let localctx = new SentenceContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, SensorGrammarParser.RULE_sentence);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 63;
	        this.createStatement();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	createStatement() {
	    let localctx = new CreateStatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, SensorGrammarParser.RULE_createStatement);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 65;
	        this.match(SensorGrammarParser.CREATE_SYMBOL);
	        this.state = 70;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 3:
	            this.state = 66;
	            this.createProduct();
	            break;
	        case 7:
	            this.state = 67;
	            this.createRange();
	            break;
	        case 15:
	        case 17:
	            this.state = 68;
	            this.createDimension();
	            break;
	        case 2:
	            this.state = 69;
	            this.createSensor();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	createProduct() {
	    let localctx = new CreateProductContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, SensorGrammarParser.RULE_createProduct);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 72;
	        this.match(SensorGrammarParser.PRODUCT_SYMBOL);
	        this.state = 73;
	        this.identifier();
	        this.state = 74;
	        this.match(SensorGrammarParser.USING_SYMBOL);
	        this.state = 75;
	        this.srid();
	        this.state = 76;
	        this.match(SensorGrammarParser.SCOL_SYMBOL);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	createRange() {
	    let localctx = new CreateRangeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, SensorGrammarParser.RULE_createRange);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 78;
	        this.match(SensorGrammarParser.RANGE_SYMBOL);
	        this.state = 79;
	        this.identifier();
	        this.state = 80;
	        this.match(SensorGrammarParser.OPAR_SYMBOL);
	        this.state = 81;
	        this.rangeProperty();
	        this.state = 86;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===38) {
	            this.state = 82;
	            this.match(SensorGrammarParser.COMMA_SYMBOL);
	            this.state = 83;
	            this.rangeProperty();
	            this.state = 88;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 89;
	        this.match(SensorGrammarParser.CPAR_SYMBOL);
	        this.state = 90;
	        this.match(SensorGrammarParser.SCOL_SYMBOL);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	rangeProperty() {
	    let localctx = new RangePropertyContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, SensorGrammarParser.RULE_rangeProperty);
	    var _la = 0;
	    try {
	        this.state = 110;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 28:
	        case 29:
	        case 45:
	        case 46:
	        case 49:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 92;
	            this.rangeNumber();
	            this.state = 95;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===30) {
	                this.state = 93;
	                this.match(SensorGrammarParser.TO_SYMBOL);
	                this.state = 94;
	                this.rangeNumber();
	            }

	            this.state = 97;
	            this.match(SensorGrammarParser.AS_SYMBOL);
	            this.state = 98;
	            this.text();
	            this.state = 101;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===25) {
	                this.state = 99;
	                this.match(SensorGrammarParser.COLOR_SYMBOL);
	                this.state = 100;
	                this.hexColor();
	            }

	            break;
	        case 21:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 103;
	            this.match(SensorGrammarParser.DEFAULT_SYMBOL);
	            this.state = 104;
	            this.match(SensorGrammarParser.AS_SYMBOL);
	            this.state = 105;
	            this.text();
	            this.state = 108;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===25) {
	                this.state = 106;
	                this.match(SensorGrammarParser.COLOR_SYMBOL);
	                this.state = 107;
	                this.hexColor();
	            }

	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	rangeNumber() {
	    let localctx = new RangeNumberContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, SensorGrammarParser.RULE_rangeNumber);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 112;
	        _la = this._input.LA(1);
	        if(!(((((_la - 28)) & ~0x1f) === 0 && ((1 << (_la - 28)) & 2490371) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	createDimension() {
	    let localctx = new CreateDimensionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, SensorGrammarParser.RULE_createDimension);
	    try {
	        this.state = 116;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 15:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 114;
	            this.createSpatialDimension();
	            break;
	        case 17:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 115;
	            this.createCategoricalDimension();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	createSpatialDimension() {
	    let localctx = new CreateSpatialDimensionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, SensorGrammarParser.RULE_createSpatialDimension);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 118;
	        this.match(SensorGrammarParser.SPATIAL_SYMBOL);
	        this.state = 119;
	        this.match(SensorGrammarParser.DIMENSION_SYMBOL);
	        this.state = 120;
	        this.identifier();
	        this.state = 121;
	        this.match(SensorGrammarParser.OPAR_SYMBOL);
	        this.state = 122;
	        this.match(SensorGrammarParser.GEOMETRY_SYMBOL);
	        this.state = 123;
	        this.match(SensorGrammarParser.COLON_SYMBOL);
	        this.state = 124;
	        this.match(SensorGrammarParser.TYPE);
	        this.state = 125;
	        this.match(SensorGrammarParser.CPAR_SYMBOL);
	        this.state = 126;
	        this.createDimensionProperties();
	        this.state = 128;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===8) {
	            this.state = 127;
	            this.createParentDimension();
	        }

	        this.state = 130;
	        this.match(SensorGrammarParser.SCOL_SYMBOL);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	createCategoricalDimension() {
	    let localctx = new CreateCategoricalDimensionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, SensorGrammarParser.RULE_createCategoricalDimension);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 132;
	        this.match(SensorGrammarParser.CATEGORICAL_SYMBOL);
	        this.state = 133;
	        this.match(SensorGrammarParser.DIMENSION_SYMBOL);
	        this.state = 134;
	        this.identifier();
	        this.state = 135;
	        this.match(SensorGrammarParser.OPAR_SYMBOL);
	        this.state = 136;
	        this.match(SensorGrammarParser.FIELD_SYMBOL);
	        this.state = 137;
	        this.match(SensorGrammarParser.COLON_SYMBOL);
	        this.state = 138;
	        this.identifier();
	        this.state = 139;
	        this.match(SensorGrammarParser.CPAR_SYMBOL);
	        this.state = 140;
	        this.match(SensorGrammarParser.SCOL_SYMBOL);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	createParentDimension() {
	    let localctx = new CreateParentDimensionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, SensorGrammarParser.RULE_createParentDimension);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 142;
	        this.match(SensorGrammarParser.WITH_SYMBOL);
	        this.state = 143;
	        this.match(SensorGrammarParser.PARENT_SYMBOL);
	        this.state = 144;
	        this.match(SensorGrammarParser.OPAR_SYMBOL);
	        this.state = 145;
	        this.identifier();
	        this.state = 150;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===38) {
	            this.state = 146;
	            this.match(SensorGrammarParser.COMMA_SYMBOL);
	            this.state = 147;
	            this.identifier();
	            this.state = 152;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 153;
	        this.match(SensorGrammarParser.CPAR_SYMBOL);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	createDimensionProperties() {
	    let localctx = new CreateDimensionPropertiesContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, SensorGrammarParser.RULE_createDimensionProperties);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 155;
	        this.match(SensorGrammarParser.WITH_SYMBOL);
	        this.state = 156;
	        this.match(SensorGrammarParser.PROPERTIES_SYMBOL);
	        this.state = 157;
	        this.match(SensorGrammarParser.OPAR_SYMBOL);
	        this.state = 158;
	        this.dimPropertyDefinition();
	        this.state = 163;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===38) {
	            this.state = 159;
	            this.match(SensorGrammarParser.COMMA_SYMBOL);
	            this.state = 160;
	            this.dimPropertyDefinition();
	            this.state = 165;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 166;
	        this.match(SensorGrammarParser.CPAR_SYMBOL);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	dimPropertyDefinition() {
	    let localctx = new DimPropertyDefinitionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, SensorGrammarParser.RULE_dimPropertyDefinition);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 168;
	        this.identifier();
	        this.state = 169;
	        this.match(SensorGrammarParser.TYPE);
	        this.state = 173;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===22) {
	            this.state = 170;
	            this.match(SensorGrammarParser.DISPLAYSTRING_SYMBOL);
	            this.state = 175;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	createSensor() {
	    let localctx = new CreateSensorContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, SensorGrammarParser.RULE_createSensor);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 176;
	        this.match(SensorGrammarParser.SENSOR_SYMBOL);
	        this.state = 177;
	        this.identifier();
	        this.state = 178;
	        this.match(SensorGrammarParser.OPAR_SYMBOL);
	        this.state = 179;
	        this.match(SensorGrammarParser.INTERVAL_SYMBOL);
	        this.state = 180;
	        this.match(SensorGrammarParser.COLON_SYMBOL);
	        this.state = 181;
	        this.match(SensorGrammarParser.INT_NUMBER);
	        this.state = 182;
	        this.match(SensorGrammarParser.COMMA_SYMBOL);
	        this.state = 183;
	        this.match(SensorGrammarParser.DATASOURCE_SYMBOL);
	        this.state = 184;
	        this.match(SensorGrammarParser.COLON_SYMBOL);
	        this.state = 185;
	        this.dataSource();
	        this.state = 186;
	        this.match(SensorGrammarParser.COMMA_SYMBOL);
	        this.state = 187;
	        this.match(SensorGrammarParser.GEOMETRY_SYMBOL);
	        this.state = 188;
	        this.match(SensorGrammarParser.COLON_SYMBOL);
	        this.state = 189;
	        this.match(SensorGrammarParser.TYPE);
	        this.state = 190;
	        this.match(SensorGrammarParser.CPAR_SYMBOL);
	        this.state = 191;
	        this.createSensorProperties();
	        this.state = 192;
	        this.createSensorMeasurementData();
	        this.state = 196;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,12,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 193;
	                this.addSpatialDimensionToSensor(); 
	            }
	            this.state = 198;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,12,this._ctx);
	        }

	        this.state = 200;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,13,this._ctx);
	        if(la_===1) {
	            this.state = 199;
	            this.addCategoricalDimensionToSensor();

	        }
	        this.state = 203;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===8) {
	            this.state = 202;
	            this.addBBXToSensor();
	        }

	        this.state = 205;
	        this.match(SensorGrammarParser.SCOL_SYMBOL);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	createSensorProperties() {
	    let localctx = new CreateSensorPropertiesContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, SensorGrammarParser.RULE_createSensorProperties);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 207;
	        this.match(SensorGrammarParser.WITH_SYMBOL);
	        this.state = 208;
	        this.match(SensorGrammarParser.PROPERTIES_SYMBOL);
	        this.state = 209;
	        this.match(SensorGrammarParser.OPAR_SYMBOL);
	        this.state = 210;
	        this.sensorPropertyDefinition();
	        this.state = 215;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===38) {
	            this.state = 211;
	            this.match(SensorGrammarParser.COMMA_SYMBOL);
	            this.state = 212;
	            this.sensorPropertyDefinition();
	            this.state = 217;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 218;
	        this.match(SensorGrammarParser.CPAR_SYMBOL);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


